--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,8 +3,8 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": "src"
+    "allowSyntheticDefaultImports": true
+    // "baseUrl": "./src"
   },
   "include": ["vite.config.ts"]
 }
